near-sdk/compilation_tests/bad_argument.stderr
error: Unsupported argument type.
  --> $DIR/bad_argument.rs:28:1
   |
28 | #[near_sdk]
   | ^^^^^^^^^^^
